# ckb-fixed-solution

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
contracts/fixed-script-example/: Cargo.toml  Makefile  README.md
contracts/fixed-script-example/src/: main.rs
crates/ckb-fixed/: Cargo.toml  Makefile  README.md
crates/ckb-fixed-tests/: Cargo.toml
crates/ckb-fixed-tests/fuzz/: Cargo.toml  Makefile  README.md
crates/ckb-fixed-tests/fuzz/fuzz_targets/: fuzz_fixed.rs  fuzz_native_fixed.rs
crates/ckb-fixed-tests/src/: lib.rs  tests.rs
crates/ckb-fixed/src/: lib.rs  transcendental.rs
tests/src/: tests.rs
