[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "tests",
  "crates/ckb-fixed",
  "crates/ckb-fixed-tests",
  "crates/ckb-fixed-tests/fuzz"
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
debug = true

[profile.dev]
debug = true
