[package]
name = "ckb-fixed"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A fixed-point ultility library on CKB."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
std = ["fixed/std"]

[dependencies]
fixed = "1.28.0"
wasm-bindgen = { version = "0.2.95" }


[dev-dependencies]
approx = "0.5.1"
